objects/L2I_Aircraft_Service__c.object
<CustomObject>
    <fields>
        <fullName>Account_Manager__c</fullName>
        <formula>Aircraft__r.L2I_Operator__c</formula>
        <label>Account Manager</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account_Name__c</fullName>
        <formula>Aircraft__r.L2I_Operator__c</formula>
        <label>Account Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Active_Last_Month__c</fullName>
        <formula>AND(NOT(ISBLANK(L2I_Activation_Date__c)), 
				YEAR(TODAY())&gt;= YEAR(DATEVALUE(L2I_Activation_Date__c)),
				YEAR(TODAY())= YEAR(DATEVALUE(L2I_Activation_Date__c)) &amp;&amp; MONTH(TODAY())&gt; MONTH(DATEVALUE(L2I_Activation_Date__c)),
				
				ISBLANK(L2I_Deactivation_Date__c) || 
				AND(YEAR(TODAY())&lt;= YEAR(DATEVALUE(L2I_Deactivation_Date__c)),
				    YEAR(TODAY())= YEAR(DATEVALUE(L2I_Deactivation_Date__c)) &amp;&amp; MONTH(TODAY())&gt;= MONTH(DATEVALUE(L2I_Deactivation_Date__c))
        )
		  )</formula>
        <label>Active Last Month</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Aircraft_Order__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>xxAircraft Order</label>
        <referenceTo>L2I_Aircraft_Order__c</referenceTo>
        <relationshipLabel>Aircraft Services</relationshipLabel>
        <relationshipName>Aircraft_Services</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Aircraft__c</fullName>
        <label>Aircraft</label>
        <referenceTo>L2I_Aircraft__c</referenceTo>
        <relationshipLabel>Aircraft Services</relationshipLabel>
        <relationshipName>Aircraft_Services</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Calculated_Activation_Date__c</fullName>
        <formula>DATEVALUE(L2I_Activation_Date__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Calculated Activation Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Calculated_Deactivation_Date__c</fullName>
        <formula>DATEVALUE(L2I_Deactivation_Date__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Calculated Deactivation Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Cancel_Date__c</fullName>
        <label>Cancel Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>First_Aircraft_Delivery_Date__c</fullName>
        <formula>TEXT( Original_Opportunity__r.L2I_First_Delivery_Date__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>First Aircraft Delivery Date</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Initial_Offset_Years__c</fullName>
        <label>Initial Offset Years</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>L2I_Activation_Adjustment_Needed__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Activation Adjustment Needed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>L2I_Activation_Date__c</fullName>
        <label>Activation Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>L2I_Aircraft_Type__c</fullName>
        <formula>Aircraft__r.Aircraft_Type__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Aircraft Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>L2I_Deactivation_Adjustment_Needed__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Deactivation Adjustment Needed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>L2I_Deactivation_Comment__c</fullName>
        <label>Deactivation Comment</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>L2I_Deactivation_Date__c</fullName>
        <label>Deactivation Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>L2I_External_ID__c</fullName>
        <externalId>true</externalId>
        <label>External ID</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>L2I_External_Source__c</fullName>
        <label>External Source</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>L2I_Integration_Message__c</fullName>
        <label>Integration Message</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>L2I_Integration_Status__c</fullName>
        <label>Integration Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>L2I_IntegrationStatus</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>L2I_Is_Yearly_Ready__c</fullName>
        <formula>Service_Activation_Type__c == &#39;Yearly&#39;
	&amp;&amp; NOT(ISNULL(Yearly_Bill_Date__c))
	&amp;&amp; NOT(ISNULL(L2I_Activation_Date__c))
	&amp;&amp; (ISNULL(L2I_Deactivation_Date__c) || DATEVALUE(L2I_Deactivation_Date__c) &gt; Yearly_Bill_Date__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Is Yearly Ready</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>L2I_OneTime_Billed__c</fullName>
        <label>OneTime Billed</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>L2I_Suspended__c</fullName>
        <formula>IF(Sub_Category_2__c = &quot;WiFi&quot; , INCLUDES( Aircraft__r.L2I_Suspended_Products__c  , &quot;WiFi&quot;), 
			IF(Sub_Category_2__c = &quot;Games&quot; , INCLUDES( Aircraft__r.L2I_Suspended_Products__c  , &quot;Games&quot;), 
			IF(Sub_Category_2__c = &quot;TV/Media&quot; , INCLUDES( Aircraft__r.L2I_Suspended_Products__c  , &quot;TV/Media&quot;), 
			IF(Sub_Category_2__c = &quot;Advertising&quot; , INCLUDES( Aircraft__r.L2I_Suspended_Products__c  , &quot;Advertising&quot;), 
			IF(Sub_Category_2__c = &quot;Cell Modem&quot; , INCLUDES( Aircraft__r.L2I_Suspended_Products__c  , &quot;Cell Modem&quot;), 
			False)))))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Suspended</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>L2I_System_date__c</fullName>
        <formula>NOW()</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>System date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>L2I_When_Activated__c</fullName>
        <label>When Activated</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>L2I_When_Deactivated__c</fullName>
        <label>When Deactivated</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>L2I_is_OneTime_Ready__c</fullName>
        <description>field identifies if one time charge can be processed by batch process.</description>
        <formula>Service_Activation_Type__c == &#39;OneTime&#39;
&amp;&amp;  ISNULL(L2I_OneTime_Billed__c) 
&amp;&amp; NOT(ISNULL(L2I_Activation_Date__c))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>is OneTime Ready</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Manual_Adjustment_Needed__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Manual Adjustment Needed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Manual_Adjustment_Notes__c</fullName>
        <label>Manual Adjustment Notes</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Matching_Id__c</fullName>
        <label>Matching Id</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Order_Product_Activation_Status__c</fullName>
        <formula>Order_Product__r.SBQQ__Activated__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>xxOrder Product Activation Status</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Order_Product__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>xxOrder Product</label>
        <referenceTo>OrderItem</referenceTo>
        <relationshipLabel>Aircraft Services</relationshipLabel>
        <relationshipName>Aircraft_Services_del</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Order_Program_Number__c</fullName>
        <formula>Aircraft_Order__r.Order__r.L2I_Program_Number__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Order Program Number</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Original_Opportunity__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Original Opportunity</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>Aircraft Services</relationshipLabel>
        <relationshipName>Aircraft_Services</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Product2__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Product</label>
        <referenceTo>Product2</referenceTo>
        <relationshipLabel>Aircraft Services</relationshipLabel>
        <relationshipName>Aircraft_Services</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Product__c</fullName>
        <formula>Product2__r.External_Id_Product_Code__c + &quot;-&quot; +  Product2__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Product</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Service_Activation_Type__c</fullName>
        <formula>Text( Product2__r.L2I_Service_Activation_Type__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Service Activation Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Pending Activation</fullName>
                </value>
                <value>
                    <fullName>Activated</fullName>
                </value>
                <value>
                    <fullName>Deactivated</fullName>
                </value>
                <value>
                    <fullName>Canceled</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Sub_Category_2__c</fullName>
        <formula>TEXT(Product2__r.L2I_Sub_Category_2__c)</formula>
        <label>Sub Category 2</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Subscription__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>xxSubscription</label>
        <referenceTo>SBQQ__Subscription__c</referenceTo>
        <relationshipLabel>Aircraft Services</relationshipLabel>
        <relationshipName>Aircraft_Services</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>System_Type__c</fullName>
        <formula>TEXT(Order_Product__r.L2I_System_Type__c)</formula>
        <label>System Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Tail_Number__c</fullName>
        <formula>Aircraft__r.L2I_Registration_Number__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Tail Number</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Yearly_Bill_Date__c</fullName>
        <label>Yearly Bill Date</label>
        <type>Date</type>
    </fields>
    <label>Aircraft Service</label>
    <listViews>
        <fullName>Active_Service_for_Daily_Billing_Batch</fullName>
        <columns>NAME</columns>
        <columns>Account_Name__c</columns>
        <columns>L2I_Activation_Date__c</columns>
        <columns>L2I_Deactivation_Date__c</columns>
        <columns>Order_Product__c</columns>
        <columns>Order_Product_Activation_Status__c</columns>
        <columns>Product__c</columns>
        <columns>Service_Activation_Type__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Status__c</field>
            <operation>equals</operation>
            <value>Activated</value>
        </filters>
        <label>Active Service for Daily Billing Batch</label>
    </listViews>
    <listViews>
        <fullName>Adjustment_Needed_List</fullName>
        <columns>NAME</columns>
        <columns>Manual_Adjustment_Needed__c</columns>
        <columns>L2I_Activation_Date__c</columns>
        <columns>L2I_When_Activated__c</columns>
        <columns>L2I_When_Deactivated__c</columns>
        <columns>L2I_Deactivation_Adjustment_Needed__c</columns>
        <columns>L2I_Activation_Adjustment_Needed__c</columns>
        <columns>L2I_Deactivation_Date__c</columns>
        <columns>Service_Activation_Type__c</columns>
        <filterScope>Everything</filterScope>
        <label>Adjustment Needed List</label>
    </listViews>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Order_Product__c</columns>
        <columns>L2I_Activation_Date__c</columns>
        <columns>Aircraft__c</columns>
        <columns>Status__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>AS-{0000}</displayFormat>
        <label>Aircraft Service</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Aircraft Services</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>Date_Validations_for_prior_dates</fullName>
        <active>true</active>
        <description>Activation Date &amp; Deactivation Date when set cannot be more then 7 days prior to today</description>
        <errorConditionFormula>$Setup.L2I_Rule_Settings__c.Enforce_Validation_Rule__c &amp;&amp;
( $Profile.Name &lt;&gt; &quot;System Administrator&quot; &amp;&amp; 
	 $Profile.Name &lt;&gt; &quot;PAC System Administrator&quot; &amp;&amp; 
	 $Profile.Name &lt;&gt; &quot;PAC Integration&quot; )
&amp;&amp; 
( ( ISCHANGED(L2I_Activation_Date__c) &amp;&amp;
		  (TODAY() - DATEVALUE(L2I_Activation_Date__c) &gt;7)
			)
  || 
	 ( ISCHANGED(L2I_Deactivation_Date__c) &amp;&amp;
		  (TODAY() - DATEVALUE(L2I_Deactivation_Date__c) &gt;7)
		)
)</errorConditionFormula>
        <errorMessage>Activation/Deactivation Dates can only be set a week prior to today, any older activation/deactivation may need manual usage adjustment. Please contact IT updates are needed prior to 7 days.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Date_cannot_be_null_or_changed</fullName>
        <active>false</active>
        <errorConditionFormula>$Setup.L2I_Rule_Settings__c.Enforce_Validation_Rule__c &amp;&amp;
(ISCHANGED( L2I_Activation_Date__c )  &amp;&amp;  NOT(ISBLANK( PRIORVALUE( L2I_Activation_Date__c ) ) )
 )|| (ISCHANGED( L2I_Deactivation_Date__c )  &amp;&amp;  NOT(ISBLANK( PRIORVALUE( L2I_Deactivation_Date__c ) ) ) 
 )</errorConditionFormula>
        <errorMessage>Activation Date or Deactivation Date cannot be nulled out or Changed once populated.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Deactivation_Date_Validation</fullName>
        <active>true</active>
        <description>Deactivation date cannot be prior to Activation Date</description>
        <errorConditionFormula>$Setup.L2I_Rule_Settings__c.Enforce_Validation_Rule__c &amp;&amp; 
ISCHANGED(L2I_Deactivation_Date__c ) &amp;&amp; L2I_Activation_Date__c &gt; L2I_Deactivation_Date__c</errorConditionFormula>
        <errorMessage>Deactivation Date cannot be prior to Activation Date on Aircraft Service record</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Yearly_Date_Validation</fullName>
        <active>true</active>
        <description>Cannot be in past</description>
        <errorConditionFormula>$Setup.L2I_Rule_Settings__c.Enforce_Validation_Rule__c &amp;&amp;
( $Profile.Name &lt;&gt; &quot;System Administrator&quot; &amp;&amp;
$Profile.Name &lt;&gt; &quot;PAC System Administrator&quot; &amp;&amp;
$Profile.Name &lt;&gt; &quot;PAC Integration&quot; )
&amp;&amp;
( ( ISCHANGED(Yearly_Bill_Date__c) &amp;&amp;
(TODAY() - Yearly_Bill_Date__c &gt;0)
) )</errorConditionFormula>
        <errorDisplayField>Yearly_Bill_Date__c</errorDisplayField>
        <errorMessage>Yearly Bill Date cannot be in past.</errorMessage>
    </validationRules>
</CustomObject>